// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Inline Validation Inline Validation 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm fYetcd"
      color="#cc1439"
    >
      <svg
        aria-hidden="true"
        class="sc-AxirZ gcJrrZ"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="error"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="InlineValidation__Wrapper-sc-1jic7dw-0 XSNbP"
      >
        <p
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
          Something has gone wrong
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inline Validation with custom content 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm fYetcd"
      color="#cc1439"
    >
      <svg
        aria-hidden="true"
        class="sc-AxirZ gcJrrZ"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="error"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="InlineValidation__Wrapper-sc-1jic7dw-0 XSNbP"
      >
        <p
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
          Something has gone wrong.
        </p>
        <ul
          class="List-sc-1cqkmnl-0 diqcEx"
          color="currentColor"
        >
          <li
            class="ListItem-qqenhw-0 fGfFTP"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            class="ListItem-qqenhw-0 fGfFTP"
            color="currentColor"
          >
            Entry must contain a number
          </li>
          <li
            class="ListItem-qqenhw-0 fGfFTP"
            color="currentColor"
          >
            <a
              class="Link-sc-1lpx3d0-0 geMpSb"
              color="blue"
              href="https://nulogy.design/"
            >
              Custom Link
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inline Validation with list items 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm fYetcd"
      color="#cc1439"
    >
      <svg
        aria-hidden="true"
        class="sc-AxirZ gcJrrZ"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="error"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="InlineValidation__Wrapper-sc-1jic7dw-0 XSNbP"
      >
        <p
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
          Something has gone wrong
        </p>
        <ul
          class="List-sc-1cqkmnl-0 diqcEx"
          color="currentColor"
        >
          <li
            class="ListItem-qqenhw-0 fGfFTP"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            class="ListItem-qqenhw-0 fGfFTP"
            color="currentColor"
          >
            Entry must contain a number.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inline Validation with only list items 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm fYetcd"
      color="#cc1439"
    >
      <svg
        aria-hidden="true"
        class="sc-AxirZ gcJrrZ"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="error"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="InlineValidation__Wrapper-sc-1jic7dw-0 XSNbP"
      >
        <ul
          class="List-sc-1cqkmnl-0 diqcEx"
          color="currentColor"
        >
          <li
            class="ListItem-qqenhw-0 fGfFTP"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            class="ListItem-qqenhw-0 fGfFTP"
            color="currentColor"
          >
            Entry must contain a number.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
